# portal

./: .gitignore  check_routes.js  dev.js  fix_routes_db.js  fix_user.js  login.json  login_wrong.json  package-lock.json  send_activation_official.js  sync_users.js  test_perf.ps1  test_perf_vacantes.ps1  test_send_email.js  test_sso_handshake.js  test_sso_v2.ps1
core/core-api/: Cargo.toml
core/core-api/.codex-target/debug/.fingerprint/bytes-d1b03353c603f31d/: output-lib-bytes
core/core-api/.codex-target/debug/.fingerprint/cfg-if-f8bf42d2fc0c3243/: output-lib-cfg_if
core/core-api/.codex-target/debug/.fingerprint/futures-core-cc2616aefd3bf110/: output-lib-futures_core
core/core-api/examples/: gen_argon2.rs  verify_argon2.rs
core/core-api/src/: app_state.rs  db.rs  db_pool.rs  main.rs  sql_read_repository.rs
core/core-api/src/config/: mod.rs
core/core-api/src/proto/: auth.proto
core/core-api/src/shared/middleware/: auth_middleware.rs  client_ip_middleware.rs  csrf_middleware.rs  observability_middleware.rs  rate_limit_middleware.rs  request_timing_middleware.rs  security_headers_middleware.rs
core/core-api/src/shared/observabilidad/: business_metrics.rs  correlation_id.rs  liveness.rs  logger.rs  metrics.rs  mod.rs  prometheus_exporter.rs  readiness.rs  request_logging.rs  request_metrics.rs  telemetry_context.rs
core/core-api/src/shared/seguridad/: audit_logger.rs  cookies.rs  csrf.rs  file_validation.rs  mfa.rs  object_authorization.rs  password_policy.rs  rate_limit.rs  request_metadata.rs  security_headers.rs  session_token.rs  token_denylist.rs
vacantes/vacantes-api/: Cargo.toml
vacantes/vacantes-api/src/: app_state.rs  candidate_sql_repository.rs  db.rs  db_pool.rs  main.rs  sql_read_repository.rs  sql_write_repository.rs
vacantes/vacantes-api/src/config/: mod.rs
vacantes/vacantes-api/src/proto/: ats.proto  cv.proto  postulacion.proto  vacante.proto
vacantes/vacantes-api/src/shared/middleware/: correlation_id_middleware.rs  security_headers_middleware.rs
vacantes/vacantes-api/src/shared/observabilidad/: business_metrics.rs  logger.rs  mod.rs  prometheus_exporter.rs  request_metrics.rs
vacantes/vacantes-api/src/shared/seguridad/: audit_logger.rs  candidate_auth.rs  file_validation.rs  input_validation.rs  mailer.rs  object_authorization.rs  portal_auth.rs  request_metadata.rs  security_headers.rs
(+1325 files in other folders)
