[package]
name = "core-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
validator = { version = "0.18", features = ["derive"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
bb8 = "0.8"
async-trait = "0.1"
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.14"
